--- a/pages/index.css
+++ b/pages/index.css
@@ -18,7 +18,6 @@
 	max-width: 1280px;
 	margin: 0 auto;
 	box-sizing: border-box;
-	
 }
 
 .header {
@@ -59,6 +58,10 @@
 	font-weight: 400;
 	font-size: 24px;
 	line-height: 1.17;
+}
+
+.header__item_active {
+	text-decoration: underline;
 }
 
 .main {
@@ -251,5 +254,85 @@
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 1.63;
+	margin: 0;
+}
+
+.cover {
+	padding: 0 48px;
+}
+.cover__link-img {
+	min-height: 740px;
+	background: url(../images/cover-trains.jpg) center / cover no-repeat;
+	position: relative;
+	z-index: 0;
+	color: #FFFFFF;
+	text-decoration: none;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	row-gap: 32px;
+	margin: 0;
+}
+
+.cover__link-img::before {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: #2A2C2F;
+	opacity: 0.3;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 0;
+
+
+}
+.cover__title {
+	font-weight: 900;
+	font-size: 72px;
+	line-height: 1.06;
+	margin: 0;
+	max-width: 560px;
+	text-align: center;
+	z-index: 2;
+}
+.cover__descr {
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 1.22;
+	margin: 0;
+	max-width: 360px;
+	text-align: center;
+	z-index: 2;
+}
+
+.footer {
+	padding: 24px 48px;
+	display: flex;
+	justify-content: space-between;
+
+}
+.footer__items-link {
+	display: flex;
+	column-gap: 18px;
+
+}
+.footer__item {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.12;
+	color: #FFFFFF;
+	text-decoration: none;
+	margin: 0;
+}
+.footer__copyright {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.14;
 	margin: 0;
 }
