connection links to the page

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-	background: url(../images/header-logo.svg) center / cover no-repeat;
+	background: url(../../../images/header-logo.svg) center / cover no-repeat;
 	width: 176px;
 	height: 52px;
 }
