--- a/blocks/cover/__link-img/cover__link-img.css
+++ b/blocks/cover/__link-img/cover__link-img.css
@@ -1,6 +1,6 @@
 .cover__link-img {
 	min-height: 740px;
-	background: url(../images/cover-trains.jpg) center / cover no-repeat;
+	background: url(../../../images/cover-trains.jpg) center / cover no-repeat;
 	position: relative;
 	z-index: 0;
 	color: #FFFFFF;
