--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,11 @@
 	background: #2a2c2f;
 	color: #FFFFFF;
 	font-family: 'Inter','Arial', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale; 
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
 	overflow: hidden;
 	
 }
