--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -4,3 +4,21 @@
 	row-gap: 92px;
 	padding: 28px 0 0;
 }
+@media screen and (max-width: 1279px) {
+	.main {
+		row-gap: 92px;
+		padding: 20px 0 0;
+	}
+}
+@media screen and (max-width: 1023px) {
+	.main {
+		row-gap: 88px;
+		/* padding: 20px 0 0; */
+	}
+}
+@media screen and (max-width: 767px) {
+	.main {
+		row-gap: 64px;
+		/* padding: 20px 0 0; */
+	}
+}
