--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -10,6 +10,7 @@
 @media screen and (max-width: 1023px) {
 	.intro {
 		padding: 0 24px;
+		max-width: 720px;
 	}
 }
 @media screen and (max-width: 767px) {
