--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -6,19 +6,17 @@
 }
 @media screen and (max-width: 1279px) {
 	.main {
-		row-gap: 92px;
 		padding: 20px 0 0;
 	}
 }
 @media screen and (max-width: 1023px) {
 	.main {
 		row-gap: 88px;
-		/* padding: 20px 0 0; */
 	}
 }
 @media screen and (max-width: 767px) {
 	.main {
 		row-gap: 64px;
-		/* padding: 20px 0 0; */
+		padding: 32px 0 0;
 	}
 }
