--- a/blocks/travel/__descr-img/travel__descr-img.css
+++ b/blocks/travel/__descr-img/travel__descr-img.css
@@ -6,3 +6,13 @@
 	text-transform: uppercase;
 	margin: 0;
 }
+@media screen and (max-width: 1023px) {
+	.travel__descr-img {
+		margin: 0 0 0 24px;
+	}
+}
+@media screen and (max-width: 767px) {
+	.travel__descr-img {
+		margin: 0 0 0 16px;
+	}
+}
