--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/intro/__descr/intro__descr.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__span-accent/intro__span-accent.css);
 @import url(../blocks/link-hover/link-hover.css);
 @import url(../blocks/main/main.css);
 @import url(../blocks/page-container/page-container.css);
@@ -29,6 +30,7 @@
 @import url(../blocks/place/__link-title/place__link-title.css);
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__text/place__text.css);
+@import url(../blocks/place/__texts/place__texts.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/travel/travel.css);
